# maintainers-copilot

./: .env.example  .gitignore  ARCH.md  DECISIONS.md  Dockerfile  EVALS.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  eval_thresholds.yaml  pyproject.toml  requirements-test.txt  uv.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_pgvector.py  0003_rag_chunks.py
app/: db.py  main.py
app/api/: __init__.py  auth.py  chat.py
app/domain/: models.py
app/infra/: exceptions.py  llm.py  minio_client.py  rag.py  redaction.py  tracing.py  vault.py
app/repositories/: chat_repository.py  conversation_repository.py  memory_repository.py  message_repository.py  models.py  user_repository.py
app/services/: auth_service.py  chat_service.py  conversation_service.py  memory_service.py
chatbot/: app.py
modelserver/: Dockerfile  classifier.py  main.py  pyproject.toml  redaction.py  tracing.py
prompts/: system_prompt.txt
scripts/: build_rag_corpus.py  eval_classification.py  eval_rag.py  fetch_issues.py  llm_baseline.py  train_classifier.py
tests/: test_redaction.py
