[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Backend for Maintainer's Copilot — AI assistant for OSS maintainers"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
asyncpg = "^0.27.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
pgvector = "^0.6.0"
redis = "^4.6.0"
python-jose = {extras=["cryptography"], version = "^3.4.0"}
passlib = {extras=["bcrypt"], version = "^1.8.1"}
openai = ">=1.0.0"
langsmith = "^0.2.0"
httpx = "^0.24.0"
pydantic = "^1.10.7"
structlog = "^22.3.0"
ruff = "^0.0.0"
mypy = "^1.6.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
scikit-learn = "^1.3.2"
transformers = "^4.34.0"
spacy = "^3.7.0"
minio = "^7.1.0"
uv = "^0.4.0"
datasets = "^2.18.0"
evaluate = "^0.4.1"
mlflow = "^2.12.0"
rank-bm25 = "^0.2.2"
torch = "^2.1.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
